--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,28 @@
 ---
-title: "hmchilders.github.io"
+title: "Heather Childers"
+image: images/profile.jpg
+toc: false
+about: 
+  template: jolla
+  links: 
+    - text: LinkedIn
+      href: https://www.linkedin.com/in/heather-childers-0b764a232/
+      icon: linkedin
+    - text: Github
+      href: https://github.com/hmchilders
+      icon: github
+    - text: Email
+      href: mailto::hmchilders@ucsb.edu
 ---
 
-This is a Quarto website.
+## Hello!
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+This is a skeleton of my website that will be filled in as I continue my progress throughout the MEDS program.
 
-```{r}
-1 + 1
-```
+STAY TUNED!
+
+**A little bit about me...**
+
+I am a graduate student at the Bren School of Environmental Science & Management pursuing a Master of Environmental Data Science degree. I recently graduated from the University of California, Davis, with a Bachelor of Science in Biological and Agricultural Engineering and a minor in Atmospheric Science. While at UC Davis, I worked with a team of undergraduate students to complete an 11-month capstone project for the College of Engineering. My team developed a solid-state fermentation bioreactor to scale up the production of protein-enriched animal feed from almond hulls. Outside of class, I enjoyed being active in the UC Davis community as President of the Society of Biological Engineers and Ambassador for the Department of Biological and Agricultural Engineering. I have continued my community involvement at UCSB as a Social Co-chair for the Womxn in Science and Engineering club and a MEDS Class Co-chair. My goal is to become a leader in the scientific community and create comprehensive climate models that contextualize the impacts of global climate change.
+
+**Experience**
