added body to new format

--- a/PasProj.qmd
+++ b/PasProj.qmd
@@ -3,3 +3,23 @@ title: "Passion Projects"
 ---
 
 Here are some of the passion projects I've been working on over the last few years, hopefully you can learn more about what I do outside of school and work :)
+
+## Yoga
+
+\[Insert blurb about my yoga journey\]
+
+## Baking
+
+\[Insert blurb about baking journey w/ links to some of my favorite recipes & mentioning how I baked goodies for each person in the cohort to promote community\]
+
+## Arts & Crafts
+
+\[Insert blurb about crafting and talk about how we put on craft nights\]
+
+Skills I've Learned:
+
+-   Cricut
+
+-   3D painting
+
+-   Crochet
