--- a/index.qmd
+++ b/index.qmd
@@ -17,4 +17,4 @@ about:
       href: mailto::hmchilders@bren.ucsb.edu
 ---
 
-I'm Heather, and I'm thrilled to share snippets of my life with you here. Balancing my education in Engineering and Data Science alongside my extracurricular pursuits and passion projects can be challenging. My hope is that this website will provide a holistic view of who I am and serve as a time capsule of my accomplishments in early adulthood. Take a look around and reach out if any of my projects interest you!
+I'm Heather, and I'm thrilled to share snippets of my life with you here. Showcasing my education in Engineering and Data Science alongside my extracurricular pursuits and passion projects under a single label, or one-page resume, can be challenging. My hope is that this website will provide a holistic view of who I am and serve as a time capsule of my accomplishments in early adulthood. Take a look around and reach out if any of my projects interest you!
